# my-website

./: Cargo.toml  Dockerfile  README.md  employment.toml  projects.toml
articles/: 2020-04-25-Writing-a-Simple-Garbage-Collector-in-C.md  2024-12-03-Scheme-to-the-Spec-Part-I:-Concurrent-Cycle-Collection.md  2024-12-03-preprint-Scheme-to-the-Spec-Part-I:-Concurrent-Cycle-Collection.md  2024-12-13-Scheme-to-the-Spec-Part-I:-Concurrent-Cycle-Collection.md  2025-02-17-Why-I'm-Writing-a-Scheme-Implementation-in-2025-(The-Answer-is-Async-Rust).md  2025-04-20-25x-Performance,-Three-Optimizations.md  2025-09-30-Where-Should-You-Put-the-Type-Param-for-a-Collect?.md
blog/: Cargo.toml
blog/src/: catppuccin_mocha.toml  lib.rs  main.rs  selenized_black.toml  selenized_white.toml
blog/templates/: article.html  articles.html  base.html  index.html  notfound.html  projects.html  resume.html  rss.xml  styles.css
server/: Cargo.toml  build.rs
server/src/: main.rs
site/: 2024-12-03-preprint-Scheme-to-the-Spec-Part-I:-Concurrent-Cycle-Collection.html  articles.html  index.html  styles.css
