[package]
name = "server"
version = "0.1.0"
authors = ["Matthew Plant <maplant@protonmail.com>"]
edition = "2021"
default-run = "server"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }

[build-dependencies]
blog = { path = "../blog" }
